--- a/argocd/vault/values.yaml
+++ b/argocd/vault/values.yaml
@@ -7,6 +7,8 @@ global:
       memory: 512Mi
       cpu: 500m
   tlsDisable: false
+injector:
+  enabled: false
 server:
   hostNetwork: false
   tolerations:
