--- a/argocd/infra/trust-manager/kustomization.yaml
+++ b/argocd/infra/trust-manager/kustomization.yaml
@@ -6,6 +6,6 @@ helmCharts:
     releaseName: trust-manager
     valuesInline:
       secretTargets:
-        enabled: "true"
+        enabled: true
         authorizedSecrets:
           - vault-tls
