--- a/argocd/infra/trust-manager/kustomization.yaml
+++ b/argocd/infra/trust-manager/kustomization.yaml
@@ -1,7 +1,7 @@
 helmCharts:
   - name: trust-manager
     repo: https://charts.jetstack.io
-    version: "v0.18.0"  # Use a current version
+    version: "v0.18.0"
     namespace: trust-manager
     releaseName: trust-manager
     valuesInline:
@@ -9,3 +9,4 @@ helmCharts:
         enabled: true
         authorizedSecrets:
           - vault-tls
+          - vault-trust-bundle
