--- a/argocd/vault/manifests/pki.yaml
+++ b/argocd/vault/manifests/pki.yaml
@@ -26,9 +26,13 @@ metadata:
   name: vault-tls
   labels:
     cert-manager.io/certificate-name: vault-tls
-    reflector.v1.k8s.emberstack.com/reflection-allowed: "true"
-    reflector.v1.k8s.emberstack.com/reflection-allowed-namespaces: "trust-manager"
 spec:
+  secretTemplate:
+    labels:
+      cert-manager.io/certificate-name: vault-tls
+    annotations:
+      reflector.v1.k8s.emberstack.com/reflection-allowed: "true"
+      reflector.v1.k8s.emberstack.com/reflection-allowed-namespaces: "trust-manager"
   secretName: vault-tls
   duration: 168h 
   renewBefore: 24h
