reflcteor for cert7

--- a/argocd/vault/manifests/pki.yaml
+++ b/argocd/vault/manifests/pki.yaml
@@ -75,10 +75,10 @@ spec:
   # A Secret in the "trust" namespace; see "Trust Namespace" below for further details
   - secret:
       key: "ca.crt"
-      #name: vault-tls
-      selector:
-        matchLabels:
-          cert-manager.io/certificate-name: vault-tls
+      name: vault-tls
+      # selector:
+      #   matchLabels:
+      #     cert-manager.io/certificate-name: vault-tls
 
   # Another Secret source, but this time using a label selector instead of a named Secret
   # - secret:
