--- a/argocd/vault/manifests/pki.yaml
+++ b/argocd/vault/manifests/pki.yaml
@@ -32,9 +32,9 @@ spec:
       cert-manager.io/certificate-name: vault-tls
     annotations:
       reflector.v1.k8s.emberstack.com/reflection-allowed: "true"
-      reflector.v1.k8s.emberstack.com/reflection-allowed-namespaces: "trust-manager"
+      reflector.v1.k8s.emberstack.com/reflection-allowed-namespaces: "cert-manager"
       reflector.v1.k8s.emberstack.com/reflection-auto-enabled: "true"
-      reflector.v1.k8s.emberstack.com/reflection-auto-namespaces: "trust-manager"
+      reflector.v1.k8s.emberstack.com/reflection-auto-namespaces: "cert-manager"
   secretName: vault-tls
   duration: 168h 
   renewBefore: 24h
