--- a/argocd/vault/kustomization.yaml
+++ b/argocd/vault/kustomization.yaml
@@ -7,7 +7,7 @@ generators:
 resources:
   - ./manifests/route.yaml
   - ./manifests/pki.yaml
-  - ./manifests/esops.yaml
+  - ./manifests/clusterSecretStore.yaml
 
 helmCharts:
   - name: vault
