set up vault secretstore5

--- a/argocd/vault/manifests/clusterSecretStore.yaml
+++ b/argocd/vault/manifests/clusterSecretStore.yaml
@@ -5,7 +5,7 @@ metadata:
 spec:
   provider:
     vault:
-      server: "https://vault-active.vault.svc.cluster.local:8200"
+      server: "https://vault.yanello.net"
       path: "k8s"
       version: "v2"
       auth:
