set up vault secretstore6

--- a/argocd/vault/manifests/clusterSecretStore.yaml
+++ b/argocd/vault/manifests/clusterSecretStore.yaml
@@ -6,7 +6,7 @@ spec:
   provider:
     vault:
       server: "https://vault.yanello.net"
-      path: "k8s"
+      path: "secrets/k8s"
       version: "v2"
       auth:
         kubernetes:
