vault rbac for serviceaccount reading

--- a/argocd/infra/esops/kustomization.yaml
+++ b/argocd/infra/esops/kustomization.yaml
@@ -4,6 +4,7 @@ kind: Kustomization
 resources:
   - ./manifests/certificate.yaml
   - ./manifests/secretstore.yaml
+  - ./manifests/rbac.yaml
 
 generators:
   - ./manifests/secret-generator.yaml
