--- a/argocd/vault/values.yaml
+++ b/argocd/vault/values.yaml
@@ -10,6 +10,8 @@ global:
 injector:
   enabled: false
 server:
+  authDelegator:
+    enabled: true
   hostNetwork: false
   tolerations:
     - key: "node-role.kubernetes.io/control-plane"
