--- a/argocd/vault/kustomization.yaml
+++ b/argocd/vault/kustomization.yaml
@@ -8,6 +8,7 @@ resources:
   - ./manifests/route.yaml
   - ./manifests/pki.yaml
   - ./manifests/clusterSecretStore.yaml
+  #- ./manifests/rbac.yaml
 
 helmCharts:
   - name: vault
