--- a/argocd/vault/manifests/rbac.yaml
+++ b/argocd/vault/manifests/rbac.yaml
@@ -14,6 +14,7 @@ metadata:
 subjects:
 - kind: ServiceAccount
   name: vault
+  namespace: vault
 roleRef:
   kind: ClusterRole
   name: read-serviceaccounts
