--- a/argocd/vault/manifests/clusterSecretStore.yaml
+++ b/argocd/vault/manifests/clusterSecretStore.yaml
@@ -16,9 +16,9 @@ spec:
           role: "esops"
           # Optional service account field containing the name
           # of a kubernetes ServiceAccount
-          # serviceAccountRef:
-          #   name: "external-secrets"
-          #   namespace: "esops"
+          serviceAccountRef:
+            name: "external-secrets"
+            namespace: "esops"
           # # Optional secret field containing a Kubernetes ServiceAccount JWT
           # #  used for authenticating with Vault
           # secretRef:
