--- a/argocd/media-server/unpackerr/kustomization.yaml
+++ b/argocd/media-server/unpackerr/kustomization.yaml
@@ -3,9 +3,8 @@ kind: Kustomization
 
 resources:
 - manifests/deploy.yaml
-- manifests/pvc.yaml
-- manifests/cm.yaml
-- manifests/ns.yaml
+#- manifests/pvc.yaml
+#- manifests/cm.yaml
 
 generators:
   -  manifests/secret-generator.yaml
