--- a/argocd/media-server/unpackerr/kustomization.yaml
+++ b/argocd/media-server/unpackerr/kustomization.yaml
@@ -4,7 +4,7 @@ kind: Kustomization
 resources:
 - manifests/deploy.yaml
 #- manifests/pvc.yaml
-- manifests/cm.yaml
+#- manifests/cm.yaml
 
 generators:
   -  manifests/secret-generator.yaml
