--- a/argocd/media-server/unpackerr/manifests/deploy.yaml
+++ b/argocd/media-server/unpackerr/manifests/deploy.yaml
@@ -42,7 +42,8 @@ spec:
               value: /data/logs/log.txt
             - name: UN_FOLDER_0_MOVE_BACK
               value: "true"
-            - name: UN_FOLDER_0_PATH=/data/torrents/completed/tv/Key.And.Peele.S01-S05.DVDRip.XviD.x264-Scene
+            - name: UN_FOLDER_0_PATH
+              value: /data/torrents/completed/tv/Key.And.Peele.S01-S05.DVDRip.XviD.x264-Scene
           envFrom:
             - secretRef:
                 name: unpackerr-secrets
