--- a/argocd/habit-trove/manifests/sts.yaml
+++ b/argocd/habit-trove/manifests/sts.yaml
@@ -40,6 +40,7 @@ spec:
         name: data
       spec:
         storageClassName: longhorn
+        accessModes: ["ReadWriteOnce"]
         resources:
           requests:
             storage: 100Mi
