--- a/argocd/habit-trove/manifests/http-route.yaml
+++ b/argocd/habit-trove/manifests/http-route.yaml
@@ -1,12 +1,12 @@
 apiVersion: gateway.networking.k8s.io/v1
 kind: HTTPRoute
 metadata:
-  # annotations:
-  #   gethomepage.dev/enabled: "true"
-  #   gethomepage.dev/name: DollarDollar
-  #   gethomepage.dev/icon: sh-dollardollar-bill-y-all
-  #   gethomepage.dev/description: "An open-source, self-hosted expense tracking and bill-splitting application designed for privacy, flexibility, and financial transparency."
-  #   gethomepage.dev/pod-selector: app=dollardollar
+  annotations:
+    gethomepage.dev/enabled: "true"
+    gethomepage.dev/name: Habit Trove
+    gethomepage.dev/icon: sh-habittrove
+    gethomepage.dev/description: "HabitTrove is a gamified habit tracking application that helps you build and maintain positive habits by rewarding you with coins, which you can use to exchange for rewards."
+    gethomepage.dev/pod-selector: app=habit-trove
   labels:
     app.kubernetes.io/instance: habit-trove
   name: habit-trove
