--- a/argocd/homepage/manifests/config/services.yaml
+++ b/argocd/homepage/manifests/config/services.yaml
@@ -4,7 +4,7 @@
         icon: opnsense
         widget:
           type: opnsense
-          url: https://opn.yanello.net
+          url: https://router.yanello.net
           username: {{HOMEPAGE_VAR_OPN_USER}}
           password: {{HOMEPAGE_VAR_OPN_PASS}}
     - MySpeed:
