--- a/argocd/epic-games/manifests/svc.yaml
+++ b/argocd/epic-games/manifests/svc.yaml
@@ -3,7 +3,7 @@ kind: Service
 metadata:
   name: epic-games
   labels:
-    app.kubernetes.io/name: epic-games
+    app: epic-games
   annotations:
 spec:
   type: ClusterIP
@@ -13,4 +13,4 @@ spec:
       protocol: TCP
       name: http
   selector:
-    app.kubernetes.io/name: epic-games
+    app: epic-games
