--- a/argocd/dev/dollardollar-dev/kustomization.yaml
+++ b/argocd/dev/dollardollar-dev/kustomization.yaml
@@ -2,10 +2,10 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 resources:
-  #- ./manifests/sts.yaml
- # - ./manifests/deploy.yaml
-  #- ./manifests/svc.yaml
-  #- ./manifests/http-route.yaml
+  - ./manifests/sts.yaml
+  - ./manifests/deploy.yaml
+  - ./manifests/svc.yaml
+  - ./manifests/http-route.yaml
   
 generators:
   - ./manifests/secret-generator.yaml
