disable dddev probes

--- a/argocd/dev/dollardollar-dev/manifests/deploy.yaml
+++ b/argocd/dev/dollardollar-dev/manifests/deploy.yaml
@@ -63,20 +63,20 @@ spec:
           ports:
             - containerPort: 5001
               protocol: TCP
-          readinessProbe:
-            httpGet:
-              path: /
-              port: 5001
-            initialDelaySeconds: 30
-            periodSeconds: 10
-            timeoutSeconds: 5
-            failureThreshold: 3
-          livenessProbe:
-            httpGet:
-              path: /
-              port: 5001
-            initialDelaySeconds: 60
-            periodSeconds: 15
-            timeoutSeconds: 5
-            failureThreshold: 3
+          # readinessProbe:
+          #   httpGet:
+          #     path: /
+          #     port: 5001
+          #   initialDelaySeconds: 30
+          #   periodSeconds: 10
+          #   timeoutSeconds: 5
+          #   failureThreshold: 3
+          # livenessProbe:
+          #   httpGet:
+          #     path: /
+          #     port: 5001
+          #   initialDelaySeconds: 60
+          #   periodSeconds: 15
+          #   timeoutSeconds: 5
+          #   failureThreshold: 3
       restartPolicy: Always
