--- a/ansible/inventory.ini
+++ b/ansible/inventory.ini
@@ -8,18 +8,22 @@ k3s_install_script_dest=/usr/local/bin/k3s-install.sh
 cluster_cidr=10.42.0.0/16
 reinstall=false
 
-[initial_k3s_server]
-192.168.10.2 node_name=picluster0
+[initial_k3s_pc_server]
+192.168.10.44 node_name=pc3
 
-[remaining_k3s_servers]
+[remaining_pc_server]
+192.168.10.55 node_name=pc4
+192.168.10.66 node_name=pc5
+
+[pi_k3s_server]
+192.168.10.2 node_name=picluster0
 192.168.10.11 node_name=picluster1
 192.168.10.22 node_name=picluster2
 
 [k3s_servers:children]
-initial_k3s_server
-remaining_k3s_servers
+initial_pc_server
+remaining_k3s_pc_servers
 
 [k3s_agents]
 192.168.10.18 node_name=marcus-server ansible_port=2200
 192.168.10.33 node_name=hp-worker
-192.168.5.5 node_name=surface
