--- a/argocd/media-server/plex/deploy.yaml
+++ b/argocd/media-server/plex/deploy.yaml
@@ -44,7 +44,7 @@ spec:
       runtimeClassName: nvidia
       containers:
         - name: plex-pms
-          image: index.docker.io/plexinc/pms-docker:1.41.6.9685-d301f511a@sha256:a13f35ef4719603e65ce867df9056bf7f99993510b64aa7f91e94e4741482870
+          image: index.docker.io/plexinc/pms-docker:1.41.9.9961-46083195d
           imagePullPolicy: IfNotPresent
           resources:
             limits:
