--- a/argocd/media-server/plex/service.yaml
+++ b/argocd/media-server/plex/service.yaml
@@ -4,30 +4,26 @@ metadata:
   name: plex
   labels:
     app: plex
-  # annotations:
-  #   metallb.io/loadBalancerIPs: 10.10.8.10
 spec:
-  # type: LoadBalancer
-  #externalTrafficPolicy: Local
   ports:
-    - port: 32400               # < port to open on the outside on the server
-      targetPort: 32400         # < targetport. port on the pod to passthrough
-      name: pms-web             # < reference name for the port in the deployment yaml
+    - port: 32400 
+      targetPort: 32400
+      name: pms-web 
       protocol: TCP
     - port: 3005
       targetPort: 3005
       name: plex-companion
     - port: 8324
       name: plex-roku
-      targetPort: 8324  
-      protocol: TCP  
+      targetPort: 8324
+      protocol: TCP
     - port: 32469
       targetPort: 32469
       name: dlna-tcp
       protocol: TCP
-    - port: 1900                # < port to open on the outside on the server
-      targetPort: 1900          # < targetport. port on the pod to passthrough
-      name: dlna-udp            # < reference name for the port in the deployment yaml
+    - port: 1900
+      targetPort: 1900
+      name: dlna-udp
       protocol: UDP
     - port: 5353
       targetPort: 5353
