--- a/argocd/open-webui/kustomization.yaml
+++ b/argocd/open-webui/kustomization.yaml
@@ -5,7 +5,7 @@ generators:
   - manifests/secret-generator.yaml
 
 resources:
-  - manifests/vs.yaml
+  #- manifests/vs.yaml
   - manifests/gw.yaml
   - manifests/http-route.yaml
 
