--- a/argocd/open-webui/manifests/values.yaml
+++ b/argocd/open-webui/manifests/values.yaml
@@ -1,12 +1,14 @@
 ollama:
-  gpu:
-    enabled: true
-    type: nvidia
-    number: 1
-  runtimeClassName: nvidia
-  persistentVolume:
-    enabled: true
-    storageClass: longhorn
+  enabled: true
+  ollama:
+    gpu:
+      enabled: true
+      type: nvidia
+      number: 1
+    runtimeClassName: nvidia
+    persistentVolume:
+      enabled: true
+      storageClass: longhorn
     
 affinity:
   nodeAffinity:
