--- a/argocd/open-webui/manifests/values.yaml
+++ b/argocd/open-webui/manifests/values.yaml
@@ -3,13 +3,13 @@ ollama:
   ollama:
     gpu:
       enabled: true
-      type: nvidia
+      type: 'nvidia'
       number: 1
-    runtimeClassName: nvidia
-    persistentVolume:
-      enabled: true
-      storageClass: longhorn
-    
+  runtimeClassName: nvidia
+  persistentVolume:
+    enabled: true
+    storageClass: longhorn
+  
 affinity:
   nodeAffinity:
     requiredDuringSchedulingIgnoredDuringExecution:
