--- a/argocd/immich/manifests/deploy.yaml
+++ b/argocd/immich/manifests/deploy.yaml
@@ -131,7 +131,7 @@ spec:
       volumes:
         - name: photos
           hostPath:
-            path: /fast-k8s/Photos
+            path: /fast-k8s/Photos/immich
         - name: model-cache
           hostPath:
             path: /fast-k8s/immich/model-cache
