--- a/argocd/immich/manifests/deploy.yaml
+++ b/argocd/immich/manifests/deploy.yaml
@@ -44,6 +44,7 @@ spec:
                       - marcus-server
       containers:
         - name: immich-server
+          command: ["sleep inf"]
           envFrom:
             - configMapRef:
                 name: immich-config
